Fix problem displaying score

--- a/SinglePage/templates/cards/task_main.html
+++ b/SinglePage/templates/cards/task_main.html
@@ -26,7 +26,7 @@
                 {% if framing == 2 %}
                     <!--Negative Framing-->
                     Thank you for your answers so far. In the previous round you answered
-                    <b>1 out of 8</b> tasks correctly.
+                    <b>2 out of 8</b> tasks correctly.
                     <br>
                     Please proceed with the survey.
                 {% endif %}
@@ -48,9 +48,21 @@
                 <div>
                     Cognitive Ability Tasks
                 </div>
-                <div class="sticky{{ page_nr }}">
-                   Correct: 1/8
-                </div>
+                {% if framing == 0 %}
+                    <!--Control Group-->
+                {% endif %}
+                {% if framing == 1 %}
+                    <!--Positive Framing-->
+                    <div class="sticky9">
+                        Correct: 6/8
+                    </div>
+                {% endif %}
+                {% if framing == 2 %}
+                    <!--Negative Framing-->
+                    <div class="sticky9">
+                        Correct: 2/8
+                    </div>
+                {% endif %}
             </div>
         </div>
         <div class="progress">
@@ -104,9 +116,21 @@
                 <div>
                     Cognitive Ability Tasks
                 </div>
-                <div class="sticky{{ page_nr }}">
-                   Correct: 1/8
-                </div>
+               {% if framing == 0 %}
+                   <!--Control Group-->
+               {% endif %}
+               {% if framing == 1 %}
+                   <!--Positive Framing-->
+                   <div class="sticky10">
+                       Correct: 6/8
+                   </div>
+               {% endif %}
+               {% if framing == 2 %}
+                   <!--Negative Framing-->
+                   <div class="sticky10">
+                       Correct: 2/8
+                   </div>
+               {% endif %}
             </div>
         </div>
         <div class="progress">
