--- a/SinglePage/templates/cards/panas_main.html
+++ b/SinglePage/templates/cards/panas_main.html
@@ -1,7 +1,7 @@
 <div class="container" id="card13" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
-            Questionnaire 2
+            Questionnaire
         </div>
         <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="0"
@@ -11,9 +11,9 @@
         </div>
         <div class="card-body">
             <div id="errorPANASmain" class="error"></div>
-            Now we would like to again know how you feel. The following words describe different kinds of feelings and
-            perception. Read every word and mark the intensity on the scale. You have the choice between five
-            gradations. Please indicate how you generally feel.
+            This scale again consists of a number of words that describe different feelings and emotions. Read each item and
+            then mark the appropriate answer in the space next to that word. Indicate to what extent you have felt this
+            way when doing the tasks. Use the following scale to record your answers.
             <br><br>
             <div class="wrap">
                 <div class="container">
