--- a/SinglePage/templates/cards/task_main.html
+++ b/SinglePage/templates/cards/task_main.html
@@ -14,12 +14,12 @@
             <p class="card-text">
                 {% if framing == 0 %}
                     <!--Control Group-->
-                    Control Group: Thank you for your answers so far. Please proceed with the survey.
+                    Thank you for your answers so far. Please proceed with the survey.
                 {% endif %}
                 {% if framing == 1 %}
                     <!--Positive Framing-->
                     Thank you for your answers so far. In the previous round you answered
-                    <b>6 out of 8</b> tasks correctly.
+                    <b>7 out of 8</b> tasks correctly.
                     <br>
                     Please proceed with the survey.
                 {% endif %}
