Stronger HIghlight conditions

--- a/SinglePage/templates/cards/personal_info.html
+++ b/SinglePage/templates/cards/personal_info.html
@@ -12,7 +12,7 @@
     <p class="card-text">
         How old are you?
         <div id="errorPersonalAge" class="error_sub"></div>
-        <input type="tel" min="0" max="110" step="1" id="age" name="age" class="form-control"  style="width: 200px">
+        <input type="number" min="0" max="110" step="1" id="age" name="age" class="form-control"  style="width: 200px">
         <hr>
         With which gender do you identify yourself?
         <div id="errorPersonalGender" class="error_sub"></div>
