Save textfield last page

--- a/SinglePage/templates/cards/end.html
+++ b/SinglePage/templates/cards/end.html
@@ -82,10 +82,10 @@
     </p>
     <p class="card-text">
         <div class="form-group">
-            <label for="1">
+            <label for="suspect_deception">
                 During the study, did you suspect that you had been given false information about your performance?
             </label>
-            <textarea class="form-control" id="1" rows="2"></textarea>
+            <textarea class="form-control" id="suspect_deception" rows="2"></textarea>
         </div>
     </p>
     <br>
