Display actual score & fix error in score save.

--- a/SinglePage/templates/cards/panas_main.html
+++ b/SinglePage/templates/cards/panas_main.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="modal-footer" id="btn-next">
-            <a class="btn btn-next" onclick="saveQuestionnaire('main', 'PANAS');"> Continue</a>
+            <a class="btn btn-next" onclick="saveQuestionnaire('main', 'PANAS'); displayScore()"> Continue</a>
         </div>
     </div>
 </div>
