--- a/SinglePage/templates/cards/end.html
+++ b/SinglePage/templates/cards/end.html
@@ -48,7 +48,7 @@
     </p>
     <p class="card-text">
         In reality, the framing condition you were presented with did not reflect your performance and was purely
-        random.
+        random. In fact, you answered <span id="actual_score"></span> out of 8 tasks correctly in the first round.
         We could not give participants complete information about the study prior to their participation, as this could
         have influenced their behavior during the study in a way that would have invalidated investigations of the
         research question. The reason for the deception in this study was to keep participants' behaviors and attitudes
